--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.14"
+    "mongoose": "^5.10.14",
+    "nodemailer": "^6.4.16"
   },
   "devDependencies": {},
   "scripts": {
