--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ajibola",
   "license": "ISC"
 }
