--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
+    "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.16"
   },
   "devDependencies": {},
